Added in recipes using new recipe system Fixed smooth Ga-Koro block 2's texture - no longer has same texture as smooth Ga-Koro block 1 Added name for dye_mask dummy item

--- a/src/main/resources/assets/nuicraft/lang/en_US.lang
+++ b/src/main/resources/assets/nuicraft/lang/en_US.lang
@@ -51,6 +51,8 @@ tile.nuicraft.bamboo.name=Bamboo
 tile.nuicraft.block_protodermis.name=Protodermis Block
 tile.nuicraft.block_protosteel.name=Protosteel Block
 
+item.nuicraft.dye_mask.name=Color Masks using one or more dyes!
+
 item.nuicraft.ingot_protodermis.name=Protodermis Ingot
 item.nuicraft.ingot_protosteel.name=Protosteel Ingot
 item.nuicraft.nugget_protodermis.name=Protodermis Nugget
