-Added Hoi Shore Turtle

--- a/src/main/resources/assets/nuicraft/lang/en_us.lang
+++ b/src/main/resources/assets/nuicraft/lang/en_us.lang
@@ -22,6 +22,7 @@ item.nuicraft.purifier_item.name=Purifier
 entity.nuicraft.disc.name=Kanoka Disc
 entity.nuicraft.mahi.name=Mahi
 entity.nuicraft.fikou.name=Fikou
+entity.nuicraft.hoi.name=Hoi
 
 tile.nuicraft.koro_block_onu_0.name=Onu-Koro Lightstone Lamp
 tile.nuicraft.koro_block_onu_1.name=Smooth Onu-Koro Stone
