Moved all Koro Blocks into the same block. Updated names + recipes.

--- a/src/main/resources/assets/nuicraft/lang/en_us.lang
+++ b/src/main/resources/assets/nuicraft/lang/en_us.lang
@@ -24,22 +24,22 @@ item.nuicraft.purifier_item.name=Purifier
 entity.nuicraft.disc.name=Kanoka Disc
 entity.nuicraft.mahi.name=Mahi
 
-tile.nuicraft.koro_block_onu_0.name=Onu-Koro Lightstone Lamp
-tile.nuicraft.koro_block_onu_1.name=Smooth Onu-Koro Stone
-tile.nuicraft.koro_block_onu_2.name=Onu-Koro Stone
-tile.nuicraft.koro_block_po_1.name=Smooth Po-Koro Stone
-tile.nuicraft.koro_block_po_2.name=Po-Koro Stone
-tile.nuicraft.koro_block_ta_0.name=Ta-Koro Lava Light
-tile.nuicraft.koro_block_ta_1.name=Smooth Ta-Koro Stone
-tile.nuicraft.koro_block_ta_2.name=Ta-Koro Stone
-tile.nuicraft.koro_block_ta_3.name=Ta-Koro Bricks
-tile.nuicraft.koro_block_trdx_1.name=Large Infected Bricks
-tile.nuicraft.koro_block_trdx_2.name=Infected Bricks
-tile.nuicraft.koro_block_ko_1.name=Ko-Koro Ice Block
-tile.nuicraft.koro_block_ko_2.name=Ko-Koro Ice Bricks
-tile.nuicraft.koro_block_ga_1.name=Ga-Koro Smooth Seaweed
-tile.nuicraft.koro_block_ga_2.name=Ga-Koro Smooth Seaweed
-tile.nuicraft.koro_block_ga_3.name=Ga-Koro Rough Seaweed
+tile.nuicraft.koro_block_proto.name=Protodermis
+tile.nuicraft.koro_block_proto_smooth.name=Smooth Protodermis
+tile.nuicraft.koro_block_proto_light.name=Protodermis Lightstone Lamp
+tile.nuicraft.koro_block_proto_sandy.name=Sandy Protodermis
+tile.nuicraft.koro_block_proto_sandy_smooth.name=Smooth Sandy Protodermis
+tile.nuicraft.koro_block_proto_dark.name=Blackened Protodermis
+tile.nuicraft.koro_block_proto_dark_smooth.name=Smooth Blackened Protodermis
+tile.nuicraft.koro_block_proto_dark_brick.name=Blackened Protodermis Brick
+tile.nuicraft.koro_block_proto_dark_light.name=Blackened Protodermis Lamp
+tile.nuicraft.koro_block_proto_frozen.name=Frozen Protodermis
+tile.nuicraft.koro_block_proto_frozen_brick.name=Frozen Protodermis Brick
+tile.nuicraft.koro_block_seaweed_rough.name=Rough Seaweed
+tile.nuicraft.koro_block_seaweed_lumpy.name=Lumpy Seaweed
+tile.nuicraft.koro_block_seaweed_smooth.name=Smooth Seaweed
+tile.nuicraft.koro_block_infected_brick.name=Infected Bricks
+tile.nuicraft.koro_block_infected_brick_large.name=Large Infected Bricks
 
 tile.nuicraft.nuva_cube.name=Nuva Cube
 tile.nuicraft.crystalized_protodermis.name=Crystalized Protodermis
@@ -60,7 +60,7 @@ item.nuicraft.ingot_protodermis.name=Protodermis Ingot
 item.nuicraft.ingot_protosteel.name=Protosteel Ingot
 item.nuicraft.nugget_protodermis.name=Protodermis Nugget
 item.nuicraft.nugget_protosteel.name=Protosteel Nugget
-item.nuicraft.raw_protodermis.name=Raw Liquid Protodermis Blob
+item.nuicraft.raw_protodermis.name=Liquid Protodermis Blob
 item.nuicraft.lightstone.name=Lightstone
 item.nuicraft.raw_heatstone.name=Heatstone
 item.nuicraft.heatstone_lighter.name=Heatstone Lighter
