Added Ice Entity for when something gets frozen by a freeze disc. Made so it could be used for other entity-freezing applications.

--- a/src/main/resources/assets/nuicraft/lang/en_us.lang
+++ b/src/main/resources/assets/nuicraft/lang/en_us.lang
@@ -108,3 +108,5 @@ item.nuicraft.mask_nuva_akaku.name=Kanohi Nuva Akaku - Mask of X-Ray Vision (WIP
 
 item.nuicraft.mask_ignika.name=Kanohi Ignika - Legendary Mask of Life
 item.nuicraft.mask_vahi.name=Kanohi Vahi - Legendary Mask of Time
+
+death.attack.shatter=%1$s was shattered
